5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/224/users/4431/executions/1692_1107.log
== TEST (2019-04-23 23:31:53) 
-- CODE:
x=int(input("Digite um numero inteiro: "))
if(x<0 and x>6):
	print("A entrada",x,"eh invalida")

-- OUTPUT:
Tipo de triangulo: isosceles
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-23 23:32:12) 
-- CODE:
x=int(input("Digite um numero inteiro: "))
if(x<0 or x>6):
	print("A entrada",x,"eh invalida")

-- OUTPUT:
A entrada 9 eh invalida
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-23 23:46:41) 
-- CODE:
x=int(input("Entre com o numero do dia de hoje: "))
if(x==0):
	y=domingo
elif(x==1):
	y=segunda
elif(x==2):
	y=terca
elif(x==3):
	y=quarta
elif(x==4):
   y=quinta
elif(x==5):
	y=sexta
elif(x==6):
	y=sabado
else:
	print("A entrada",x,"eh invalida")
   


-- OUTPUT:
A entrada 9 eh invalida
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-23 23:46:57) 
-- CODE:
x=int(input("Entre com o numero do dia de hoje: "))
if(x==0):
	y=domingo
elif(x==1):
	y=segunda
elif(x==2):
	y=terca
elif(x==3):
	y=quarta
elif(x==4):
   y=quinta
elif(x==5):
	y=sexta
elif(x==6):
	y=sabado
else:
	print("A entrada",x,"eh invalida")
print(y)	
   


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 18, in <module>
    print(y)	
NameError: name 'y' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-23 23:48:57) 
-- CODE:
x=int(input("Entre com o numero do dia de hoje: "))
if(x==0):
	y="domingo"
elif(x==1):
	y="segunda"
elif(x==2):
	y="terca"
elif(x==3):
	y="quarta"
elif(x==4):
   y="quinta"
elif(x==5):
	y="sexta"
elif(x==6):
	y="sabado"
else:
	print("A entrada",x,"eh invalida")
print(y)	
   


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 18, in <module>
    print(y)	
NameError: name 'y' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-23 23:48:57) 
-- CODE:
x=int(input("Entre com o numero do dia de hoje: "))
if(x==0):
	y="domingo"
elif(x==1):
	y="segunda"
elif(x==2):
	y="terca"
elif(x==3):
	y="quarta"
elif(x==4):
   y="quinta"
elif(x==5):
	y="sexta"
elif(x==6):
	y="sabado"
else:
	print("A entrada",x,"eh invalida")
print(y)	
   


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 18, in <module>
    print(y)	
NameError: name 'y' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-23 23:48:57) 
-- CODE:
x=int(input("Entre com o numero do dia de hoje: "))
if(x==0):
	y="domingo"
elif(x==1):
	y="segunda"
elif(x==2):
	y="terca"
elif(x==3):
	y="quarta"
elif(x==4):
   y="quinta"
elif(x==5):
	y="sexta"
elif(x==6):
	y="sabado"
else:
	print("A entrada",x,"eh invalida")
print(y)	
   


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 18, in <module>
    print(y)	
NameError: name 'y' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-23 23:50:40) 
-- CODE:
x=int(input("Entre com o numero do dia de hoje: "))
if(x==0):
	y="domingo"
elif(x==1):
	y="segunda"
elif(x==2):
	y="terca"
elif(x==3):
	y="quarta"
elif(x==4):
   y="quinta"
elif(x==5):
	y="sexta"
elif(x==6):
	y="sabado"
else:
	print("A entrada",x,"eh invalida")
print(y)	
   


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 18, in <module>
    print(y)	
NameError: name 'y' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-23 23:50:48) 
-- CODE:
x=int(input("Entre com o numero do dia de hoje: "))
if(x==0):
	y="domingo"
elif(x==1):
	y="segunda"
elif(x==2):
	y="terca"
elif(x==3):
	y="quarta"
elif(x==4):
   y="quinta"
elif(x==5):
	y="sexta"
elif(x==6):
	y="sabado"
else:
	print("A entrada",x,"eh invalida")
print(y)	
   


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 18, in <module>
    print(y)	
NameError: name 'y' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-24 00:44:42) 
-- CODE:
x=int(input("Entre com o numero do dia de hoje: "))
if(x==0):
	y="domingo"
elif(x==1):
	y="segunda"
elif(x==2):
	y="terca"
elif(x==3):
	y="quarta"
elif(x==4):
   y="quinta"
elif(x==5):
	y="sexta"
elif(x==6):
	y="sabado"
else:
	print("A entrada",x,"eh invalida")

a=int(input("Entre com o numero de dias apos hoje: "))
a=200%7-x
print(a)

	
   


-- OUTPUT:
A entrada 9 eh invalida
-5
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-24 00:45:11) 
-- CODE:
x=int(input("Entre com o numero do dia de hoje: "))
if(x==0):
	y="domingo"
elif(x==1):
	y="segunda"
elif(x==2):
	y="terca"
elif(x==3):
	y="quarta"
elif(x==4):
   y="quinta"
elif(x==5):
	y="sexta"
elif(x==6):
	y="sabado"
else:
	print("A entrada",x,"eh invalida")

a=int(input("Entre com o numero de dias apos hoje: "))
a=200%7+x
print(a)

	
   


-- OUTPUT:
A entrada 9 eh invalida
13
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-24 00:45:56) 
-- CODE:
x=int(input("Entre com o numero do dia de hoje: "))
if(x==0):
	y="domingo"
elif(x==1):
	y="segunda"
elif(x==2):
	y="terca"
elif(x==3):
	y="quarta"
elif(x==4):
   y="quinta"
elif(x==5):
	y="sexta"
elif(x==6):
	y="sabado"
else:
	print("A entrada",x,"eh invalida")

a=int(input("Entre com o numero de dias apos hoje: "))
a=200%7+x
if(a>6):
	a=(a%7+x)-7
print(a)	

	
   


-- OUTPUT:
A entrada 9 eh invalida
8
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-24 00:47:42) 
-- CODE:
x=int(input("Entre com o numero do dia de hoje: "))
if(x==0):
	y="domingo"
elif(x==1):
	y="segunda"
elif(x==2):
	y="terca"
elif(x==3):
	y="quarta"
elif(x==4):
   y="quinta"
elif(x==5):
	y="sexta"
elif(x==6):
	y="sabado"
else:
	print("A entrada",x,"eh invalida")

a=int(input("Entre com o numero de dias apos hoje: "))
a=a%7+x
if(a>6):
	a=(a%7+x)-7
print(a)	

	
   


-- OUTPUT:
A entrada 9 eh invalida
6
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-24 00:48:16) 
-- CODE:
x=int(input("Entre com o numero do dia de hoje: "))
if(x==0):
	y="domingo"
elif(x==1):
	y="segunda"
elif(x==2):
	y="terca"
elif(x==3):
	y="quarta"
elif(x==4):
   y="quinta"
elif(x==5):
	y="sexta"
elif(x==6):
	y="sabado"
else:
	print("A entrada",x,"eh invalida")

a=int(input("Entre com o numero de dias apos hoje: "))
h=a%7+x
print(h)


	
   


-- OUTPUT:
A entrada 9 eh invalida
11
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-24 00:49:01) 
-- CODE:
x=int(input("Entre com o numero do dia de hoje: "))
if(x==0):
	y="domingo"
elif(x==1):
	y="segunda"
elif(x==2):
	y="terca"
elif(x==3):
	y="quarta"
elif(x==4):
   y="quinta"
elif(x==5):
	y="sexta"
elif(x==6):
	y="sabado"
else:
	print("A entrada",x,"eh invalida")

a=int(input("Entre com o numero de dias apos hoje: "))
h=a%7+x
if(h>6):
	a=(a%7+x)-7
print(a)	


	
   


-- OUTPUT:
A entrada 9 eh invalida
4
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-24 00:49:24) 
-- CODE:
x=int(input("Entre com o numero do dia de hoje: "))
if(x==0):
	y="domingo"
elif(x==1):
	y="segunda"
elif(x==2):
	y="terca"
elif(x==3):
	y="quarta"
elif(x==4):
   y="quinta"
elif(x==5):
	y="sexta"
elif(x==6):
	y="sabado"
else:
	print("A entrada",x,"eh invalida")

a=int(input("Entre com o numero de dias apos hoje: "))
h=a%7+x
if(h>6):
	h=(a%7+x)-7

	


	
   


-- OUTPUT:
A entrada 9 eh invalida
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-24 00:49:36) 
-- CODE:
x=int(input("Entre com o numero do dia de hoje: "))
if(x==0):
	y="domingo"
elif(x==1):
	y="segunda"
elif(x==2):
	y="terca"
elif(x==3):
	y="quarta"
elif(x==4):
   y="quinta"
elif(x==5):
	y="sexta"
elif(x==6):
	y="sabado"
else:
	print("A entrada",x,"eh invalida")

a=int(input("Entre com o numero de dias apos hoje: "))
h=a%7+x
if(h>6):
	h=(a%7+x)-7
print(h)	

	


	
   


-- OUTPUT:
A entrada 9 eh invalida
4
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-24 00:51:12) 
-- CODE:
x=int(input("Entre com o numero do dia de hoje: "))
if(x==0):
	y="domingo"
elif(x==1):
	y="segunda"
elif(x==2):
	y="terca"
elif(x==3):
	y="quarta"
elif(x==4):
   y="quinta"
elif(x==5):
	y="sexta"
elif(x==6):
	y="sabado"
else:
	print("A entrada",x,"eh invalida")

a=int(input("Entre com o numero de dias apos hoje: "))
h=a%7+x
if(h>6):
	h=(a%7+x)-7
if(h==0):
	h="domingo"
elif(h==1):
	h="segunda"
elif(h==2):
	h="terca"
elif(h==3):
	h="quarta"
elif(h==4):
   h="quinta"
elif(h==5):
	h="sexta"
elif(h==6):
	h="sabado"
	
print("Hoje eh",y,"e o dia futuro eh",h)	

	


	
   


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 38, in <module>
    print("Hoje eh",y,"e o dia futuro eh",h)	
NameError: name 'y' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-24 00:51:26) 
-- CODE:
x=int(input("Entre com o numero do dia de hoje: "))
if(x==0):
	y="domingo"
elif(x==1):
	y="segunda"
elif(x==2):
	y="terca"
elif(x==3):
	y="quarta"
elif(x==4):
   y="quinta"
elif(x==5):
	y="sexta"
elif(x==6):
	y="sabado"
else:
	print("A entrada",x,"eh invalida")

a=int(input("Entre com o numero de dias apos hoje: "))
h=a%7+x
if(h>6):
	h=(a%7+x)-7
if(h==0):
	h="domingo"
elif(h==1):
	h="segunda"
elif(h==2):
	h="terca"
elif(h==3):
	h="quarta"
elif(h==4):
   h="quinta"
elif(h==5):
	h="sexta"
elif(h==6):
	h="sabado"
	
print("Hoje eh",y,"e o dia futuro eh",h)	

	


	
   


-- EXECUTION TIME:
0.17796
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1692/1107/main.py", line 38, in <module>
    print("Hoje eh",y,"e o dia futuro eh",h)	
NameError: name 'y' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-24 00:51:30) 
-- CODE:
x=int(input("Entre com o numero do dia de hoje: "))
if(x==0):
	y="domingo"
elif(x==1):
	y="segunda"
elif(x==2):
	y="terca"
elif(x==3):
	y="quarta"
elif(x==4):
   y="quinta"
elif(x==5):
	y="sexta"
elif(x==6):
	y="sabado"
else:
	print("A entrada",x,"eh invalida")

a=int(input("Entre com o numero de dias apos hoje: "))
h=a%7+x
if(h>6):
	h=(a%7+x)-7
if(h==0):
	h="domingo"
elif(h==1):
	h="segunda"
elif(h==2):
	h="terca"
elif(h==3):
	h="quarta"
elif(h==4):
   h="quinta"
elif(h==5):
	h="sexta"
elif(h==6):
	h="sabado"
	
print("Hoje eh",y,"e o dia futuro eh",h)	

	


	
   


-- EXECUTION TIME:
0.195973
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1692/1107/main.py", line 38, in <module>
    print("Hoje eh",y,"e o dia futuro eh",h)	
NameError: name 'y' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-24 12:22:02) 
-- CODE:
x=int(input("Entre com o numero do dia de hoje: "))
if(x==0):
	y="domingo"
elif(x==1):
	y="segunda"
elif(x==2):
	y="terca"
elif(x==3):
	y="quarta"
elif(x==4):
   y="quinta"
elif(x==5):
	y="sexta"
elif(x==6):
	y="sabado"
else:
	print("A entrada",x,"eh invalida")

a=int(input("Entre com o numero de dias apos hoje: "))
h=(a+x)%7
if(h==0):
	h="domingo"
elif(h==1):
	h="segunda"
elif(h==2):
	h="terca"
elif(h==3):
	h="quarta"
elif(h==4):
   h="quinta"
elif(h==5):
	h="sexta"
elif(h==6):
	h="sabado"
	
print("Hoje eh",y,"e o dia futuro eh",h)	

	


	
   


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 36, in <module>
    print("Hoje eh",y,"e o dia futuro eh",h)	
NameError: name 'y' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-24 12:22:12) 
-- CODE:
x=int(input("Entre com o numero do dia de hoje: "))
if(x==0):
	y="domingo"
elif(x==1):
	y="segunda"
elif(x==2):
	y="terca"
elif(x==3):
	y="quarta"
elif(x==4):
   y="quinta"
elif(x==5):
	y="sexta"
elif(x==6):
	y="sabado"
else:
	print("A entrada",x,"eh invalida")

a=int(input("Entre com o numero de dias apos hoje: "))
h=(a+x)%7
if(h==0):
	h="domingo"
elif(h==1):
	h="segunda"
elif(h==2):
	h="terca"
elif(h==3):
	h="quarta"
elif(h==4):
   h="quinta"
elif(h==5):
	h="sexta"
elif(h==6):
	h="sabado"
	
print("Hoje eh",y,"e o dia futuro eh",h)	

	


	
   


-- EXECUTION TIME:
0.146862
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1692/1107/main.py", line 36, in <module>
    print("Hoje eh",y,"e o dia futuro eh",h)	
NameError: name 'y' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-24 12:22:17) 
-- CODE:
x=int(input("Entre com o numero do dia de hoje: "))
if(x==0):
	y="domingo"
elif(x==1):
	y="segunda"
elif(x==2):
	y="terca"
elif(x==3):
	y="quarta"
elif(x==4):
   y="quinta"
elif(x==5):
	y="sexta"
elif(x==6):
	y="sabado"
else:
	print("A entrada",x,"eh invalida")

a=int(input("Entre com o numero de dias apos hoje: "))
h=(a+x)%7
if(h==0):
	h="domingo"
elif(h==1):
	h="segunda"
elif(h==2):
	h="terca"
elif(h==3):
	h="quarta"
elif(h==4):
   h="quinta"
elif(h==5):
	h="sexta"
elif(h==6):
	h="sabado"
	
print("Hoje eh",y,"e o dia futuro eh",h)	

	


	
   


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 36, in <module>
    print("Hoje eh",y,"e o dia futuro eh",h)	
NameError: name 'y' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-24 12:22:58) 
-- CODE:
x=int(input("Entre com o numero do dia de hoje: "))
if(x==0):
	y="domingo"
elif(x==1):
	y="segunda"
elif(x==2):
	y="terca"
elif(x==3):
	y="quarta"
elif(x==4):
   y="quinta"
elif(x==5):
	y="sexta"
elif(x==6):
	y="sabado"
else:
	print("A entrada",x,"eh invalida")

a=int(input("Entre com o numero de dias apos hoje: "))
h=(a+x)%7
if(h==0):
	h="domingo"
elif(h==1):
	h="segunda"
elif(h==2):
	h="terca"
elif(h==3):
	h="quarta"
elif(h==4):
   h="quinta"
elif(h==5):
	h="sexta"
elif(h==6):
	h="sabado"
	
print("Hoje eh",y,"e o dia futuro eh",h)	

	


	
   


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 36, in <module>
    print("Hoje eh",y,"e o dia futuro eh",h)	
NameError: name 'y' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-24 12:23:25) 
-- CODE:
x=int(input("Entre com o numero do dia de hoje: "))
if(x==0):
	y="domingo"
elif(x==1):
	y="segunda"
elif(x==2):
	y="terca"
elif(x==3):
	y="quarta"
elif(x==4):
   y="quinta"
elif(x==5):
	y="sexta"
elif(x==6):
	y="sabado"
else:
	print("A entrada",x,"eh invalida")

a=int(input("Entre com o numero de dias apos hoje: "))
h=(a+x)%7
if(h==0):
	h="domingo"
elif(h==1):
	h="segunda"
elif(h==2):
	h="terca"
elif(h==3):
	h="quarta"
elif(h==4):
   h="quinta"
elif(h==5):
	h="sexta"
elif(h==6):
	h="sabado"
	
print("Hoje eh",y,"e o dia futuro eh",h)	

	


	
   


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 36, in <module>
    print("Hoje eh",y,"e o dia futuro eh",h)	
NameError: name 'y' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-24 12:26:02) 
-- CODE:
x=int(input("Entre com o numero do dia de hoje: "))
if(x!=0)and(x!=1)and(x!=2)and(x!=3)and(x!=4)and(x!=5)and(x!=6):
	print("A entrada",x,"eh invalida")
elif(x==0):
	y="domingo"
elif(x==1):
	y="segunda"
elif(x==2):
	y="terca"
elif(x==3):
	y="quarta"
elif(x==4):
   y="quinta"
elif(x==5):
	y="sexta"
elif(x==6):
	y="sabado"
else:
a=int(input("Entre com o numero de dias apos hoje: "))
h=(a+x)%7
if(h==0):
	h="domingo"
elif(h==1):
	h="segunda"
elif(h==2):
	h="terca"
elif(h==3):
	h="quarta"
elif(h==4):
   h="quinta"
elif(h==5):
	h="sexta"
elif(h==6):
	h="sabado"
	
print("Hoje eh",y,"e o dia futuro eh",h)	

	


	
   


-- ERROR:
File "XXXX", line 19
    a=int(input())
    ^
IndentationError: expected an indented block
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-24 12:26:25) 
-- CODE:
x=int(input("Entre com o numero do dia de hoje: "))
if(x!=0)and(x!=1)and(x!=2)and(x!=3)and(x!=4)and(x!=5)and(x!=6):
	print("A entrada",x,"eh invalida")
elif(x==0):
	y="domingo"
elif(x==1):
	y="segunda"
elif(x==2):
	y="terca"
elif(x==3):
	y="quarta"
elif(x==4):
   y="quinta"
elif(x==5):
	y="sexta"
elif(x==6):
	y="sabado"
else:
   a=int(input("Entre com o numero de dias apos hoje: "))
   h=(a+x)%7
   if(h==0):
	   h="domingo"
   elif(h==1):
	   h="segunda"
   elif(h==2):
	   h="terca"
elif(h==3):
	h="quarta"
elif(h==4):
   h="quinta"
elif(h==5):
	h="sexta"
elif(h==6):
	h="sabado"
	
print("Hoje eh",y,"e o dia futuro eh",h)	

	


	
   


-- ERROR:
File "XXXX", line 27
    elif(h==3):
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-24 12:26:49) 
-- CODE:
x=int(input("Entre com o numero do dia de hoje: "))
if(x!=0)and(x!=1)and(x!=2)and(x!=3)and(x!=4)and(x!=5)and(x!=6):
	print("A entrada",x,"eh invalida")
elif(x==0):
	y="domingo"
elif(x==1):
	y="segunda"
elif(x==2):
	y="terca"
elif(x==3):
	y="quarta"
elif(x==4):
   y="quinta"
elif(x==5):
	y="sexta"
elif(x==6):
	y="sabado"
else:
   a=int(input("Entre com o numero de dias apos hoje: "))
   h=(a+x)%7
   if(h==0):
	   h="domingo"
   elif(h==1):
	   h="segunda"
   elif(h==2):
	   h="terca"
   elif(h==3):
	   h="quarta"
   elif(h==4):
      h="quinta"
   elif(h==5):
	   h="sexta"
   elif(h==6):
	   h="sabado"
	
print("Hoje eh",y,"e o dia futuro eh",h)	

	


	
   


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 36, in <module>
    print("Hoje eh",y,"e o dia futuro eh",h)	
NameError: name 'y' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-24 12:27:06) 
-- CODE:
x=int(input("Entre com o numero do dia de hoje: "))
if(x!=0)and(x!=1)and(x!=2)and(x!=3)and(x!=4)and(x!=5)and(x!=6):
	print("A entrada",x,"eh invalida")
elif(x==0):
	y="domingo"
elif(x==1):
	y="segunda"
elif(x==2):
	y="terca"
elif(x==3):
	y="quarta"
elif(x==4):
   y="quinta"
elif(x==5):
	y="sexta"
elif(x==6):
	y="sabado"
else:
   a=int(input("Entre com o numero de dias apos hoje: "))
   h=(a+x)%7
   if(h==0):
	   h="domingo"
   elif(h==1):
	   h="segunda"
   elif(h==2):
	   h="terca"
   elif(h==3):
	   h="quarta"
   elif(h==4):
      h="quinta"
   elif(h==5):
	   h="sexta"
		print("Hoje eh",y,"e o dia futuro eh",h)	
   elif(h==6):
	   h="sabado"
		print("Hoje eh",y,"e o dia futuro eh",h)	
	
print("Hoje eh",y,"e o dia futuro eh",h)	

	


	
   


-- ERROR:
File "XXXX", line 33
    print("Hoje eh",y,"e o dia futuro eh",h)	
                                            ^
TabError: inconsistent use of tabs and spaces in indentation
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-24 12:28:56) 
-- CODE:
x=int(input("Entre com o numero do dia de hoje: "))
if(x!=0)and(x!=1)and(x!=2)and(x!=3)and(x!=4)and(x!=5)and(x!=6):
	print("A entrada",x,"eh invalida")
elif(x==0):
	y="domingo"
elif(x==1):
	y="segunda"
elif(x==2):
	y="terca"
elif(x==3):
	y="quarta"
elif(x==4):
   y="quinta"
elif(x==5):
	y="sexta"
elif(x==6):
	y="sabado"
else:
   a=int(input("Entre com o numero de dias apos hoje: "))
   h=(a+x)%7
   if(h==0):
	   h="domingo"
   elif(h==1):
	   h="segunda"
   elif(h==2):
	   h="terca"
   elif(h==3):
	   h="quarta"
   elif(h==4):
      h="quinta"
   elif(h==5):
	   h="sexta"
   elif(h==6):
	   h="sabado"
		
	
if(x!=0)and(x!=1)and(x!=2)and(x!=3)and(x!=4)and(x!=5)and(x!=6):	
	v=0
else:
	print("Hoje eh",y,"e o dia futuro eh",h)
	
	


	

	


	
   


-- OUTPUT:
A entrada 9 eh invalida
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-24 12:30:21) 
-- CODE:
x=int(input("Entre com o numero do dia de hoje: "))
if(x!=0)and(x!=1)and(x!=2)and(x!=3)and(x!=4)and(x!=5)and(x!=6):
	print("A entrada",x,"eh invalida")
elif(x==0):
	y="domingo"
elif(x==1):
	y="segunda"
elif(x==2):
	y="terca"
elif(x==3):
	y="quarta"
elif(x==4):
   y="quinta"
elif(x==5):
	y="sexta"
elif(x==6):
	y="sabado"
	
if(x!=0)and(x!=1)and(x!=2)and(x!=3)and(x!=4)and(x!=5)and(x!=6):		
   a=int(input("Entre com o numero de dias apos hoje: "))
   h=(a+x)%7
   if(h==0):
	   h="domingo"
   elif(h==1):
	   h="segunda"
   elif(h==2):
	   h="terca"
   elif(h==3):
	   h="quarta"
   elif(h==4):
      h="quinta"
   elif(h==5):
	   h="sexta"
   elif(h==6):
	   h="sabado"
		
	
if(x!=0)and(x!=1)and(x!=2)and(x!=3)and(x!=4)and(x!=5)and(x!=6):	
	v=0
else:
	print("Hoje eh",y,"e o dia futuro eh",h)
	
	


	

	


	
   


-- OUTPUT:
A entrada 9 eh invalida
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-24 12:30:54) 
-- CODE:
x=int(input("Entre com o numero do dia de hoje: "))
if(x!=0)and(x!=1)and(x!=2)and(x!=3)and(x!=4)and(x!=5)and(x!=6):
	print("A entrada",x,"eh invalida")
elif(x==0):
	y="domingo"
elif(x==1):
	y="segunda"
elif(x==2):
	y="terca"
elif(x==3):
	y="quarta"
elif(x==4):
   y="quinta"
elif(x==5):
	y="sexta"
elif(x==6):
	y="sabado"
	
if(x!=0)and(x!=1)and(x!=2)and(x!=3)and(x!=4)and(x!=5)and(x!=6):
	p=p
else:	
   a=int(input("Entre com o numero de dias apos hoje: "))
   h=(a+x)%7
   if(h==0):
	   h="domingo"
   elif(h==1):
	   h="segunda"
   elif(h==2):
	   h="terca"
   elif(h==3):
	   h="quarta"
   elif(h==4):
      h="quinta"
   elif(h==5):
	   h="sexta"
   elif(h==6):
	   h="sabado"
		
	
if(x!=0)and(x!=1)and(x!=2)and(x!=3)and(x!=4)and(x!=5)and(x!=6):	
	v=0
else:
	print("Hoje eh",y,"e o dia futuro eh",h)
	
	


	

	


	
   


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 20, in <module>
    p=p
NameError: name 'p' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-24 12:31:01) 
-- CODE:
x=int(input("Entre com o numero do dia de hoje: "))
if(x!=0)and(x!=1)and(x!=2)and(x!=3)and(x!=4)and(x!=5)and(x!=6):
	print("A entrada",x,"eh invalida")
elif(x==0):
	y="domingo"
elif(x==1):
	y="segunda"
elif(x==2):
	y="terca"
elif(x==3):
	y="quarta"
elif(x==4):
   y="quinta"
elif(x==5):
	y="sexta"
elif(x==6):
	y="sabado"
	
if(x!=0)and(x!=1)and(x!=2)and(x!=3)and(x!=4)and(x!=5)and(x!=6):
	p=p
else:	
   a=int(input("Entre com o numero de dias apos hoje: "))
   h=(a+x)%7
   if(h==0):
	   h="domingo"
   elif(h==1):
	   h="segunda"
   elif(h==2):
	   h="terca"
   elif(h==3):
	   h="quarta"
   elif(h==4):
      h="quinta"
   elif(h==5):
	   h="sexta"
   elif(h==6):
	   h="sabado"
		
	
if(x!=0)and(x!=1)and(x!=2)and(x!=3)and(x!=4)and(x!=5)and(x!=6):	
	v=0
else:
	print("Hoje eh",y,"e o dia futuro eh",h)
	
	


	

	


	
   


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 20, in <module>
    p=p
NameError: name 'p' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-24 12:31:11) 
-- CODE:
x=int(input("Entre com o numero do dia de hoje: "))
if(x!=0)and(x!=1)and(x!=2)and(x!=3)and(x!=4)and(x!=5)and(x!=6):
	print("A entrada",x,"eh invalida")
elif(x==0):
	y="domingo"
elif(x==1):
	y="segunda"
elif(x==2):
	y="terca"
elif(x==3):
	y="quarta"
elif(x==4):
   y="quinta"
elif(x==5):
	y="sexta"
elif(x==6):
	y="sabado"
	
if(x!=0)and(x!=1)and(x!=2)and(x!=3)and(x!=4)and(x!=5)and(x!=6):
	p=0
else:	
   a=int(input("Entre com o numero de dias apos hoje: "))
   h=(a+x)%7
   if(h==0):
	   h="domingo"
   elif(h==1):
	   h="segunda"
   elif(h==2):
	   h="terca"
   elif(h==3):
	   h="quarta"
   elif(h==4):
      h="quinta"
   elif(h==5):
	   h="sexta"
   elif(h==6):
	   h="sabado"
		
	
if(x!=0)and(x!=1)and(x!=2)and(x!=3)and(x!=4)and(x!=5)and(x!=6):	
	v=0
else:
	print("Hoje eh",y,"e o dia futuro eh",h)
	
	


	

	


	
   


-- OUTPUT:
A entrada 9 eh invalida
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-24 12:31:19) 
-- CODE:
x=int(input("Entre com o numero do dia de hoje: "))
if(x!=0)and(x!=1)and(x!=2)and(x!=3)and(x!=4)and(x!=5)and(x!=6):
	print("A entrada",x,"eh invalida")
elif(x==0):
	y="domingo"
elif(x==1):
	y="segunda"
elif(x==2):
	y="terca"
elif(x==3):
	y="quarta"
elif(x==4):
   y="quinta"
elif(x==5):
	y="sexta"
elif(x==6):
	y="sabado"
	
if(x!=0)and(x!=1)and(x!=2)and(x!=3)and(x!=4)and(x!=5)and(x!=6):
	p=0
else:	
   a=int(input("Entre com o numero de dias apos hoje: "))
   h=(a+x)%7
   if(h==0):
	   h="domingo"
   elif(h==1):
	   h="segunda"
   elif(h==2):
	   h="terca"
   elif(h==3):
	   h="quarta"
   elif(h==4):
      h="quinta"
   elif(h==5):
	   h="sexta"
   elif(h==6):
	   h="sabado"
		
	
if(x!=0)and(x!=1)and(x!=2)and(x!=3)and(x!=4)and(x!=5)and(x!=6):	
	v=0
else:
	print("Hoje eh",y,"e o dia futuro eh",h)
	
	


	

	


	
   


-- OUTPUT:
A entrada 9 eh invalida
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-24 12:31:27) 
-- CODE:
x=int(input("Entre com o numero do dia de hoje: "))
if(x!=0)and(x!=1)and(x!=2)and(x!=3)and(x!=4)and(x!=5)and(x!=6):
	print("A entrada",x,"eh invalida")
elif(x==0):
	y="domingo"
elif(x==1):
	y="segunda"
elif(x==2):
	y="terca"
elif(x==3):
	y="quarta"
elif(x==4):
   y="quinta"
elif(x==5):
	y="sexta"
elif(x==6):
	y="sabado"
	
if(x!=0)and(x!=1)and(x!=2)and(x!=3)and(x!=4)and(x!=5)and(x!=6):
	p=0
else:	
   a=int(input("Entre com o numero de dias apos hoje: "))
   h=(a+x)%7
   if(h==0):
	   h="domingo"
   elif(h==1):
	   h="segunda"
   elif(h==2):
	   h="terca"
   elif(h==3):
	   h="quarta"
   elif(h==4):
      h="quinta"
   elif(h==5):
	   h="sexta"
   elif(h==6):
	   h="sabado"
		
	
if(x!=0)and(x!=1)and(x!=2)and(x!=3)and(x!=4)and(x!=5)and(x!=6):	
	v=0
else:
	print("Hoje eh",y,"e o dia futuro eh",h)
	
	


	

	


	
   


-- OUTPUT:
A entrada 9 eh invalida
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-24 12:31:31) 
-- CODE:
x=int(input("Entre com o numero do dia de hoje: "))
if(x!=0)and(x!=1)and(x!=2)and(x!=3)and(x!=4)and(x!=5)and(x!=6):
	print("A entrada",x,"eh invalida")
elif(x==0):
	y="domingo"
elif(x==1):
	y="segunda"
elif(x==2):
	y="terca"
elif(x==3):
	y="quarta"
elif(x==4):
   y="quinta"
elif(x==5):
	y="sexta"
elif(x==6):
	y="sabado"
	
if(x!=0)and(x!=1)and(x!=2)and(x!=3)and(x!=4)and(x!=5)and(x!=6):
	p=0
else:	
   a=int(input("Entre com o numero de dias apos hoje: "))
   h=(a+x)%7
   if(h==0):
	   h="domingo"
   elif(h==1):
	   h="segunda"
   elif(h==2):
	   h="terca"
   elif(h==3):
	   h="quarta"
   elif(h==4):
      h="quinta"
   elif(h==5):
	   h="sexta"
   elif(h==6):
	   h="sabado"
		
	
if(x!=0)and(x!=1)and(x!=2)and(x!=3)and(x!=4)and(x!=5)and(x!=6):	
	v=0
else:
	print("Hoje eh",y,"e o dia futuro eh",h)
	
	


	

	


	
   


-- EXECUTION TIME:
0.267955
-- TEST CASE 1:
---- input:
9
9

---- correct output:
A entrada 9 eh invalida
---- user output:
A entrada 9 eh invalida
-- TEST CASE 2:
---- input:
6
1024
---- correct output:
Hoje eh sabado e o dia futuro eh segunda
---- user output:
Hoje eh sabado e o dia futuro eh segunda
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-26 01:24:07) 
-- CODE:
x=int(input("Entre com o numero do dia de hoje: "))
if(x!=0)and(x!=1)and(x!=2)and(x!=3)and(x!=4)and(x!=5)and(x!=6):
	print("A entrada",x,"eh invalida")
elif(x==0):
	y="domingo"
elif(x==1):
	y="segunda"
elif(x==2):
	y="terca"
elif(x==3):
	y="quarta"
elif(x==4):
   y="quinta"
elif(x==5):
	y="sexta"
elif(x==6):
	y="sabado"
	
if(x!=0)and(x!=1)and(x!=2)and(x!=3)and(x!=4)and(x!=5)and(x!=6):
	p=0
else:	
   a=int(input("Entre com o numero de dias apos hoje: "))
   h=(a+x)%7
   if(h==0):
	   h="domingo"
   elif(h==1):
	   h="segunda"
   elif(h==2):
	   h="terca"
   elif(h==3):
	   h="quarta"
   elif(h==4):
      h="quinta"
   elif(h==5):
	   h="sexta"
   elif(h==6):
	   h="sabado"
		
	
if(x!=0)and(x!=1)and(x!=2)and(x!=3)and(x!=4)and(x!=5)and(x!=6):	
	v=0
else:
	print("Hoje eh",y,"e o dia futuro eh",h)
	
	


	

	


	
   


-- EXECUTION TIME:
0.138592
-- TEST CASE 1:
---- input:
9
9

---- correct output:
A entrada 9 eh invalida
---- user output:
A entrada 9 eh invalida
-- TEST CASE 2:
---- input:
6
1024
---- correct output:
Hoje eh sabado e o dia futuro eh segunda
---- user output:
Hoje eh sabado e o dia futuro eh segunda
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
